# cpp-course

./: .gitignore  clean.sh
.github/workflows/: release.yml
01_ci_cd/: CMakeLists.txt
01_ci_cd/src/: main.cpp
